--- a/benchmark-service/benchmark/templates/lookup.html
+++ b/benchmark-service/benchmark/templates/lookup.html
@@ -6,7 +6,7 @@
 
 <h1>Benchmark System</h1>
 
-<form autocomplete="off" action="{{ base_path }}/" method="get">
+<form autocomplete="off" action="{{ base_path }}/lookup" method="get">
     <div class="autocomplete">
         <input type="text" name="file" class="autoComplete"></input>
     </div>
