--- a/web_common/web_common/templates/header.html
+++ b/web_common/web_common/templates/header.html
@@ -81,16 +81,16 @@
     Scorecard
   </a>
   {% endif %}
-
-  {% if userdata['is_developer'] == 1 %}
-  <div class="header-dropdown">
-    <div class="header-dropdown-item-margin">
-      <a href="{{ benchmark_base_url }}" class="header-dropdown-link">Benchmark</a>
-      <div class="header-dropdown-menu">
-        <div class="benchmark-caret header-dropdown-menu-caret"></div>
-        <a class="header-dropdown-menu-link" href="{{ benchmark_base_url }}/">Lookup</a>
-        <a class="header-dropdown-menu-link" href="{{ benchmark_base_url }}/compare">Compare</a>
-      </div>
+    {% if userdata['is_developer'] == 1 %}
+    <div class="header-dropdown">
+        <div class="header-dropdown-item-margin">
+            <a href="{{ benchmark_base_url }}" class="header-dropdown-link">Benchmark</a>
+            <div class="header-dropdown-menu">
+                <div class="benchmark-caret header-dropdown-menu-caret"></div>
+                <a class="header-dropdown-menu-link" href="{{ benchmark_base_url }}/lookup">Lookup</a>
+                <a class="header-dropdown-menu-link" href="{{ benchmark_base_url }}/compare">Compare</a>
+            </div>
+        </div>
     </div>
   </div>
   {% endif %}
