[hail][site] XSLT is dead. Long live Jinja2. (#9597)
* [hail][docs][site] XSLT is dead. Long live Jinja2!

High level take-aways:

- Hail docs now have syntax highlighting (we just needed to import pygments.css).
- Search works again.
- There are now only two root HTML templates: `site/templates/base.html` and
  `web_common/web_common/templates/layout.html`. I cannot unify these further
  because our services and our main websites actually differ significantly.
- The search/nav bar is now present in the HTML, no JS nonsense to
  asynchronously load it into place after HTML rendering.
- Site now has a `make watch` which watches for changes and automatically
  re-renders the HTML.
- Site now has a few make rules that facilitate experimenting with how the docs
  are displayed within the context of the current development version of site's
  CSS & HTML.
- XSLT is now only used by the C++ tests.

Smaller things:

- Removed bootstrap dependencies. Did we ever actually use these?
- Removed "clipboard.js" dependency. Also not clear from where this came.
- Removed use of the `subtitle` tag, which isn't actually an HTML tag?

Future work:

- Simplify our CSS. It's not possible to logically reason about our CSS. And it
  interacts in bad ways with the latent RTD themes. I want a unified Hail visual
  theme.
- Clean up the search-related JavaScript in nav-bottom.html and
  search.html. These both seem too complicated to just make search work.

---

The thrust of this PR is to restructure Hail's website and documentation to
entirely rely on Jinja2 templates. Previously, we used a mix of Jinja2, XSLT,
and in-browser JavaScript DOM manipulation to piece together a web page.

Now, all of Hail's non-service website derives from
`site/templates/base.html`. It is a Jinja2 template with four blocks: title,
meta_description, head, and content. It ensures that:
- Hail's CSS is loaded,
- the Hail icon is set,
- the fonts are loaded,
- the source code highlighter is loaded (prism.js, only 

--- a/site/www/style.css
+++ b/site/www/style.css
@@ -745,6 +745,14 @@ pre {
   border-radius: 4px;
 }
 
+.rst-content div[class^='highlight'] {
+  border: 0 !important; /* In Hail docs, clear out Sphinx RTD borders */
+}
+
+div.highlight pre {
+  border-color: #ddd; /* in Hail docs, force border to be gray */
+}
+
 pre code {
   padding: 0;
 }
