--- a/benchmark-service/benchmark/templates/index.html
+++ b/benchmark-service/benchmark/templates/index.html
@@ -21,7 +21,7 @@
     <tr>
         <td><a href="{{ base_path }}/lookup?file={{ file }}">{{ commit['commit']['message'] }}</a></td>
         <td>{{ commit['sha'] }}</td>
-        <td>{{ commit['commit']['author']['name']</td>
+        <td>{{ commit['commit']['author']['name'] }}</td>
         <td>{{ commit['commit']['author']['date'] }}</td>
     </tr>
     {% endfor %}
