--- a/benchmark-service/benchmark/templates/index.html
+++ b/benchmark-service/benchmark/templates/index.html
@@ -19,13 +19,15 @@
     <tbody>
     {% for commit in commits %}
     <tr>
-        <td><a href="{{ base_path }}/lookup?file={{ file }}">{{ commit['commit']['message'] }}</a></td>
-        <td>{{ commit['sha'] }}</td>
-        <td>{{ commit['commit']['author']['name'] }}</td>
-        <td>{{ commit['commit']['author']['date'] }}</td>
+        <td><a href="{{ base_path }}/lookup?file={{ file }}">{{ commit['commit']['title'] }}</a></td>
+        <td>{{ commit['commit']['sha'] }}</td>
+        <td>{{ commit['commit']['author'] }}</td>
+        <td>{{ commit['commit']['date'] }}</td>
+        <td>{{ commit['commit']['status'] }}</td>
     </tr>
     {% endfor %}
     </tbody>
 </table>
 
+<p> gh_commit </p>
 {% endblock %}
