--- a/auth/auth/templates/users.html
+++ b/auth/auth/templates/users.html
@@ -26,21 +26,23 @@
   <table class="data-table">
     <thead>
       <tr>
-	<th>ID</th>
-	<th>Username</th>
-	<th>State</th>
-	<th>Developer</th>
-	<th>Robot</th>
+        <th>ID</th>
+        <th>Username</th>
+        <th>Email</th>
+        <th>State</th>
+        <th>Developer</th>
+        <th>Robot</th>
       </tr>
     </thead>
     <tbody>
       {% for user in users %}
       <tr>
-	<td class="numeric-cell">{{ user['id'] }}</td>
-	<td>{{ user['username'] }}</td>
-	<td>{{ user['state'] }}</td>
-	<td class="numeric-cell">{{ user['is_developer'] }}</td>
-	<td class="numeric-cell">{{ user['is_service_account'] }}</td>
+        <td class="numeric-cell">{{ user['id'] }}</td>
+        <td>{{ user['username'] }}</td>
+        <td>{{ user['email'] }}</td>
+        <td>{{ user['state'] }}</td>
+        <td class="numeric-cell">{{ user['is_developer'] }}</td>
+        <td class="numeric-cell">{{ user['is_service_account'] }}</td>
       </tr>
       {% endfor %}
     </tbody>
