--- a/web_common/web_common/templates/header.html
+++ b/web_common/web_common/templates/header.html
@@ -108,6 +108,9 @@
     </button>
   </form>
   {% else %}
+  <a class="header-link" href="{{ auth_base_url }}/signup">
+    Signup
+  </a>  
   <a class="header-link" href="{{ auth_base_url }}/login">
     Login
   </a>
