--- a/benchmark-service/benchmark/templates/index.html
+++ b/benchmark-service/benchmark/templates/index.html
@@ -6,6 +6,16 @@
 
 <h1>Benchmark System</h1>
 
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+
+<div class="chart" id="scatterplot">
+    <script>
+        var graphs = {{plot | safe}};
+        Plotly.plot('scatterplot',graphs,{});
+    </script>
+</div>
+
 <table class="data-table">
     <thead>
     <tr>
