--- a/web_common/web_common/templates/header.html
+++ b/web_common/web_common/templates/header.html
@@ -25,8 +25,10 @@
 	  <a class="header-dropdown-menu-link" href="{{ batch_base_url }}/billing_projects">Billing Projects</a>
         {% endif %}
 
+	{% if userdata %}
         <a class="header-dropdown-menu-link" href="{{ batch_base_url}}/billing_limits">Billing Limits</a>
-
+        {% endif %}
+	
 	{% if userdata['is_developer'] == 1 %}
           <a class="header-dropdown-menu-link" href="{{ batch_base_url }}/billing">Billing</a>
 	  <a class="header-dropdown-menu-link" href="{{ batch_driver_base_url }}/user_resources">User Resources</a>
