[batch] Fix UI page for billing limits

--- a/batch/batch/front_end/templates/billing_limits.html
+++ b/batch/batch/front_end/templates/billing_limits.html
@@ -12,7 +12,7 @@
     </tr>
     </thead>
     <tbody>
-    {% for row in billing_limits %}
+    {% for row in billing_projects %}
     <tr>
       <td>{{ row['billing_project'] }}</td>
       <td>{{ row['accrued_cost'] }}</td>
