--- a/web_common/web_common/templates/header.html
+++ b/web_common/web_common/templates/header.html
@@ -4,116 +4,112 @@
   </a>
 
   {% if userdata['is_developer'] == 1 %}
-    <div class="header-dropdown">
-      <div class="header-dropdown-item-margin">
-	<span class="disabled-header-dropdown-item">Auth</span>
-	<div class="header-dropdown-menu">
-	  <div class="auth-caret header-dropdown-menu-caret"></div>
-	  <a class="header-dropdown-menu-link" href="{{ auth_base_url }}/users">Users</a>
-	</div>
+  <div class="header-dropdown">
+    <div class="header-dropdown-item-margin">
+      <span class="disabled-header-dropdown-item">Auth</span>
+      <div class="header-dropdown-menu">
+        <div class="auth-caret header-dropdown-menu-caret"></div>
+        <a class="header-dropdown-menu-link" href="{{ auth_base_url }}/users">Users</a>
       </div>
     </div>
+  </div>
   {% endif %}
 
   <div class="header-dropdown">
     <div class="header-dropdown-item-margin">
       <a href="{{ batch_base_url }}" class="header-dropdown-link">Batch</a>
       <div class="header-dropdown-menu">
-	<div class="batch-caret header-dropdown-menu-caret"></div>
-	{% if userdata['is_developer'] == 1 %}
-	  <a class="header-dropdown-menu-link" href="{{ batch_driver_base_url }}">Driver</a>
-	  <a class="header-dropdown-menu-link" href="{{ batch_base_url }}/billing_projects">Billing Projects</a>
+        <div class="batch-caret header-dropdown-menu-caret"></div>
+        {% if userdata['is_developer'] == 1 %}
+        <a class="header-dropdown-menu-link" href="{{ batch_driver_base_url }}">Driver</a>
+        <a class="header-dropdown-menu-link" href="{{ batch_base_url }}/billing_projects">Billing Projects</a>
         {% endif %}
 
-	{% if userdata['username'] %}
+        {% if userdata['username'] %}
         <a class="header-dropdown-menu-link" href="{{ batch_base_url}}/billing_limits">Billing Limits</a>
         {% endif %}
-	
-	{% if userdata['is_developer'] == 1 %}
-          <a class="header-dropdown-menu-link" href="{{ batch_base_url }}/billing">Billing</a>
-	  <a class="header-dropdown-menu-link" href="{{ batch_driver_base_url }}/user_resources">User Resources</a>
-	{% endif %}
-	<a class="header-dropdown-menu-link" href="https://hail.is/docs/batch/">Docs</a>
+
+        {% if userdata['is_developer'] == 1 %}
+        <a class="header-dropdown-menu-link" href="{{ batch_base_url }}/billing">Billing</a>
+        <a class="header-dropdown-menu-link" href="{{ batch_driver_base_url }}/user_resources">User Resources</a>
+        {% endif %}
+        <a class="header-dropdown-menu-link" href="https://hail.is/docs/batch/">Docs</a>
       </div>
     </div>
   </div>
 
   {% if userdata['is_developer'] == 1 %}
-    <a class="header-link" href="{{ ci_base_url }}">
-      CI
-    </a>
+  <a class="header-link" href="{{ ci_base_url }}">CI</a>
   {% endif %}
 
   {% if userdata['is_developer'] == 1 %}
-    <div class="header-dropdown">
-      <div class="header-dropdown-item-margin">
-	<a href="{{ notebook_base_url }}/notebook" class="header-dropdown-link">Notebook</a>
-	<div class="header-dropdown-menu">
-	  <div class="notebook-caret header-dropdown-menu-caret"></div>
-	  <a class="header-dropdown-menu-link" href="{{ notebook_base_url }}/workshop-admin">Workshop Admin</a>
-	  <a class="header-dropdown-menu-link" href="{{ workshop_base_url }}">Workshop</a>
-	</div>
+  <div class="header-dropdown">
+    <div class="header-dropdown-item-margin">
+      <a href="{{ notebook_base_url }}/notebook" class="header-dropdown-link">Notebook</a>
+      <div class="header-dropdown-menu">
+        <div class="notebook-caret header-dropdown-menu-caret"></div>
+        <a class="header-dropdown-menu-link" href="{{ notebook_base_url }}/workshop-admin">Workshop Admin</a>
+        <a class="header-dropdown-menu-link" href="{{ workshop_base_url }}">Workshop</a>
       </div>
     </div>
+  </div>
   {% else %}
-    <a class="header-link" href="{{ notebook_base_url }}/notebook">
-      Notebook
-    </a>
+  <a class="header-link" href="{{ notebook_base_url }}/notebook">Notebook</a>
   {% endif %}
 
   {% if userdata['is_developer'] == 1 %}
-    <div class="header-dropdown">
-      <div class="header-dropdown-item-margin">
-	<span class="disabled-header-dropdown-item">Monitoring</span>
-	<div class="header-dropdown-menu">
-	  <div class="monitoring-caret header-dropdown-menu-caret"></div>
-	  <a target="_blank" class="header-dropdown-menu-link" href="https://console.cloud.google.com/monitoring">
-	    Monitoring<i class="material-icons text-icon">open_in_new</i>
-	  </a>
-	  <a target="_blank" class="header-dropdown-menu-link" href="https://console.cloud.google.com/logs">
-	    Log Viewer<i class="material-icons text-icon">open_in_new</i>
-	  </a>
-	  <a class="header-dropdown-menu-link" href="{{ monitoring_base_url }}/billing">Billing</a>
-	</div>
+  <div class="header-dropdown">
+    <div class="header-dropdown-item-margin">
+      <span class="disabled-header-dropdown-item">Monitoring</span>
+      <div class="header-dropdown-menu">
+        <div class="monitoring-caret header-dropdown-menu-caret"></div>
+        <a target="_blank" class="header-dropdown-menu-link" href="https://console.cloud.google.com/monitoring">
+          Monitoring<i class="material-icons text-icon">open_in_new</i>
+	      </a>
+        <a target="_blank" class="header-dropdown-menu-link" href="https://console.cloud.google.com/logs">
+          Log Viewer<i class="material-icons text-icon">open_in_new</i>
+	      </a>
+        <a class="header-dropdown-menu-link" href="{{ monitoring_base_url }}/billing">Billing</a>
       </div>
     </div>
+  </div>
   {% endif %}
 
   {% if userdata['is_developer'] == 1 %}
-    <a class="header-link" href="{{ scorecard_base_url }}">
-      Scorecard
-    </a>
+  <a class="header-link" href="{{ scorecard_base_url }}">
+    Scorecard
+  </a>
   {% endif %}
 
-    {% if userdata['is_developer'] == 1 %}
-    <div class="header-dropdown">
-        <div class="header-dropdown-item-margin">
-            <a href="{{ benchmark_base_url }}" class="header-dropdown-link">Benchmark</a>
-            <div class="header-dropdown-menu">
-                <div class="benchmark-caret header-dropdown-menu-caret"></div>
-                <a class="header-dropdown-menu-link" href="{{ benchmark_base_url }}/">Lookup</a>
-                <a class="header-dropdown-menu-link" href="{{ benchmark_base_url }}/compare">Compare</a>
-            </div>
-        </div>
+  {% if userdata['is_developer'] == 1 %}
+  <div class="header-dropdown">
+    <div class="header-dropdown-item-margin">
+      <a href="{{ benchmark_base_url }}" class="header-dropdown-link">Benchmark</a>
+      <div class="header-dropdown-menu">
+        <div class="benchmark-caret header-dropdown-menu-caret"></div>
+        <a class="header-dropdown-menu-link" href="{{ benchmark_base_url }}/">Lookup</a>
+        <a class="header-dropdown-menu-link" href="{{ benchmark_base_url }}/compare">Compare</a>
+      </div>
     </div>
-    {% endif %}
+  </div>
+  {% endif %}
 
   <div id="header-flex"></div>
 
   {% if userdata %}
-    <a href="{{ auth_base_url }}/user" class="header-link">
-      <b>{{ userdata["username"] }}</b>
-    </a>
-    |
-    <form action="{{ auth_base_url }}/logout" method="POST">
-      <input type="hidden" name="_csrf" value="{{ csrf_token }}"/>
-      <button class="button-header-link" type="submit">
-        Log out
-      </button>
-    </form>
+  <a href="{{ auth_base_url }}/user" class="header-link">
+    <b>{{ userdata["username"] }}</b>
+  </a>
+  |
+  <form action="{{ auth_base_url }}/logout" method="POST">
+    <input type="hidden" name="_csrf" value="{{ csrf_token }}"/>
+    <button class="button-header-link" type="submit">
+      Log out
+    </button>
+  </form>
   {% else %}
-    <a class="header-link" href="{{ auth_base_url }}/login">
-      Login
-    </a>
+  <a class="header-link" href="{{ auth_base_url }}/login">
+    Login
+  </a>
   {% endif %}
 </div>
