--- a/web_common/web_common/templates/header.html
+++ b/web_common/web_common/templates/header.html
@@ -109,7 +109,7 @@
   </form>
   {% else %}
   <a class="header-link" href="{{ auth_base_url }}/signup">
-    Signup
+    Sign Up
   </a>
   <a class="header-link" href="{{ auth_base_url }}/login">
     Login
