[auth] add roles table and UI, currently unused

--- a/web_common/web_common/templates/header.html
+++ b/web_common/web_common/templates/header.html
@@ -9,6 +9,7 @@
       <span class="disabled-header-dropdown-item">Auth</span>
       <div class="header-dropdown-menu">
         <div class="auth-caret header-dropdown-menu-caret"></div>
+        <a class="header-dropdown-menu-link" href="{{ auth_base_url }}/roles">Roles</a>
         <a class="header-dropdown-menu-link" href="{{ auth_base_url }}/users">Users</a>
       </div>
     </div>
