--- a/atgu/atgu/templates/create_resource.html
+++ b/atgu/atgu/templates/create_resource.html
@@ -92,6 +92,7 @@
 
 	<div class="m-3">
 	  <button type="submit" class="btn btn-primary">Create</button>
+	  <a role="button" class="btn btn-secondary" href="{{ base_path }}/resources">Cancel</a>
 	</div>
       </div>
       
