--- a/atgu/atgu/templates/edit_resource.html
+++ b/atgu/atgu/templates/edit_resource.html
@@ -97,6 +97,7 @@
       
       <div class="m-3">
 	<button type="submit" class="btn btn-primary">Update</button>
+	<a role="button" class="btn btn-secondary" href="{{ base_path }}/resources/{{ resource['id'] }}">Cancel</a>
       </div>
 
     </form>
