--- a/atgu/atgu/templates/edit_resource.html
+++ b/atgu/atgu/templates/edit_resource.html
@@ -93,11 +93,11 @@
 	  </div>
 	</div>
 
-      </div>
-      
-      <div class="m-3">
-	<button type="submit" class="btn btn-primary">Update</button>
-	<a role="button" class="btn btn-secondary" href="{{ base_path }}/resources/{{ resource['id'] }}">Cancel</a>
+	<div class="ml-3">
+	  <button type="submit" class="btn btn-primary mr-3">Update</button>
+	  <a role="button" class="btn btn-secondary" href="{{ base_path }}/resources/{{ resource['id'] }}">Cancel</a>
+	</div>
+
       </div>
 
     </form>
