--- a/atgu/atgu/templates/create_resource.html
+++ b/atgu/atgu/templates/create_resource.html
@@ -91,7 +91,7 @@
 	</div>
 
 	<div class="m-3">
-	  <button type="submit" class="btn btn-primary">Create</button>
+	  <button type="submit" class="btn btn-primary mr-3">Create</button>
 	  <a role="button" class="btn btn-secondary" href="{{ base_path }}/resources">Cancel</a>
 	</div>
       </div>
