[atgu] add layout template

--- a/atgu/atgu/templates/resource.html
+++ b/atgu/atgu/templates/resource.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
   </head>
   <body>
-    <div class="p-3 mb-3 bg-white border-bottom">
-      <h5 class="my-0 font-weight-normal">ATGU</h5>
+    <div class="p-3 mb-3 bg-white border-bottom h5">
+      ATGU
     </div>
 
       <nav aria-label="breadcrumb">
