--- a/atgu/atgu/templates/resources.html
+++ b/atgu/atgu/templates/resources.html
@@ -1,50 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Editor</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+{% extends "layout.html" %}
+{% block title %}Resources{% endblock %}
+{% block head %}
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="p-3 mb-3 bg-white border-bottom">
-      <h5 class="my-0 font-weight-normal">ATGU</h5>
+{% endblock %}
+{% block breadcrumb_items %}
+    <li class="breadcrumb-item"><a href="{{ base_path }}">ATGU</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Resources</li>
+{% endblock %}
+{% block container_contents %}
+    <div class="row my-3">
+      <div class="col">
+	<div style="float:right;">Search: <input id="searchbox" type="text" /></div>
+      </div>
     </div>
 
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb bg-transparent">
-	<li class="breadcrumb-item"><a href="{{ base_path }}">ATGU</a></li>
-	<li class="breadcrumb-item active" aria-current="page">Resources</li>
-      </ol>
-    </nav>
-    
-    <div class="container">
-
-      <div class="row my-3">
-	<div class="col">
-	  <div style="float:right;">Search: <input id="searchbox" type="text" /></div>
+    <div class="row">
+      <div class="col">
+	<div style="float:right;">
+	  <form action="{{ base_path }}/resources/create">
+	    <button type="submit" class="btn btn-primary">New</button>
+	  </form>
 	</div>
       </div>
-      
-      <div class="row">
-	<div class="col">
-	  <div style="float:right;">
-	    <form action="{{ base_path }}/resources/create">
-	      <button type="submit" class="btn btn-primary">New</button>
-	    </form>
-	  </div>
-	</div>
-      </div>
-
-      <div id="resources">
-      </div>
-      
     </div>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    
+
+    <div id="resources">
+    </div>
+{% endblock %}
+{% block before_body_end %}
     <script src="https://cdn.quilljs.com/1.3.6/quill.js" crossorigin="anonymous"></script>
     
     <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.2"></script>
@@ -101,5 +84,4 @@
       oninput();
       searchbox.oninput = oninput;
     </script>
-  </body>
-</html>
+{% endblock %}
