use template in resource page

--- a/atgu/atgu/templates/layout.html
+++ b/atgu/atgu/templates/layout.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="border-bottom">
-      <div class="p-3 h5">ATGU</div>
+      <div class="p-3 m-0 h5">ATGU</div>
     </div>
 
     <nav aria-label="breadcrumb">
