--- a/atgu/atgu/templates/resource.html
+++ b/atgu/atgu/templates/resource.html
@@ -1,78 +1,62 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Editor</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="p-3 mb-3 bg-white border-bottom h5">
-      ATGU
+{% extends "layout.html" %}
+{% block title %}{{ resource['title'] }}{% endblock %}
+{% block head %}
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
+{% endblock %}
+{% block breadcrumb_items %}
+  <li class="breadcrumb-item"><a href="{{ base_path }}">ATGU</a></li>
+  <li class="breadcrumb-item"><a href="{{ base_path }}">Resources</a></li>
+  <li class="breadcrumb-item active" aria-current="page">{{ resource['title'] }}</li>
+{% endblock %}
+{% block container_contents %}
+  <div class="row">
+    <div class="col">
+      <div style="float:right;">
+	<form action="{{ base_path }}/resources/{{ resource['id'] }}/edit" class="pr-3" style="display:inline;">
+	  <button type="submit" class="btn btn-primary">Edit</button>
+	</form>
+
+	<form action="{{ base_path }}/resources/{{ resource['id'] }}/delete" method="post" style="display:inline;">
+	  <input type="hidden" name="_csrf" value="{{ csrf_token }}">
+	  <button type="submit" class="btn btn-danger">Delete</button>
+	</form>
+      </div>
     </div>
+  </div>
 
-      <nav aria-label="breadcrumb">
-	<ol class="breadcrumb bg-transparent">
-	  <li class="breadcrumb-item"><a href="{{ base_path }}">ATGU</a></li>
-	  <li class="breadcrumb-item"><a href="{{ base_path }}">Resources</a></li>
-	  <li class="breadcrumb-item active" aria-current="page">{{ resource['title'] }}</li>
-	</ol>
-      </nav>
+  <h2 class="my-0">{{ resource['title'] }}</h2>
 
-      <div class="container">
-	<div class="row">
-	  <div class="col">
-	    <div style="float:right;">
-	      <form action="{{ base_path }}/resources/{{ resource['id'] }}/edit" class="pr-3" style="display:inline;">
-		<button type="submit" class="btn btn-primary">Edit</button>
-	      </form>
+  <p><small class="text-secondary" style="line-height:1.2;">{{ resource['tags'] }}</small></p>
 
-	      <form action="{{ base_path }}/resources/{{ resource['id'] }}/delete" method="post" style="display:inline;">
-		<input type="hidden" name="_csrf" value="{{ csrf_token }}">
-		<button type="submit" class="btn btn-danger">Delete</button>
-	      </form>
-	    </div>
-	  </div>
+  <div class="mb-3">
+    <div id="contents"></div>
+  </div>
+
+  {% if resource['attachments'] is not none and resource['attachments']|length > 0 %}
+    <h5>Attachments</h5>
+    <div id="files-div" class="pl-3">
+      {% for attachment_id, filename in resource['attachments'].items() %}
+	<div class="my-1">
+	  <a href="{{ base_path }}/resources/{{ resource['id'] }}/attachments/{{ attachment_id }}">
+	    {{ filename }}
+	  </a>
 	</div>
-	
-	<h2 class="my-0">{{ resource['title'] }}</h2>
-	
-	<p><small class="text-secondary" style="line-height:1.2;">{{ resource['tags'] }}</small></p>
-	
-	<div class="mb-3">
-	  <div id="contents"></div>
-	</div>
-	
-	{% if resource['attachments'] is not none and resource['attachments']|length > 0 %}
-	<h5>Attachments</h5>
-	<div id="files-div" class="pl-3">
-	  {% for attachment_id, filename in resource['attachments'].items() %}
-	  <div class="my-1">
-	    <a href="{{ base_path }}/resources/{{ resource['id'] }}/attachments/{{ attachment_id }}">
-	      {{ filename }}
-	    </a>
-	  </div>
-	  {% endfor %}
-	</div>
-	{% endif %}
+      {% endfor %}
     </div>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js" crossorigin="anonymous"></script>
-    <script>
-      const contentsOptions = {
-	  readOnly: true,
-	  modules: {
-	      toolbar: false
-	  },
-	  theme: 'snow'
-      };
-      
-      const contents = new Quill('#contents', contentsOptions);
-      contents.setContents({{ resource['contents']|tojson }});
-    </script>
-  </body>
-</html>
+  {% endif %}
+{% endblock %}
+{% block before_body_end %}
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js" crossorigin="anonymous"></script>
+  <script>
+    const contentsOptions = {
+	readOnly: true,
+	modules: {
+	    toolbar: false
+	},
+	theme: 'snow'
+    };
+
+    const contents = new Quill('#contents', contentsOptions);
+    contents.setContents({{ resource['contents']|tojson }});
+  </script>
+{% endblock %}
