--- a/atgu/atgu/templates/create_resource.html
+++ b/atgu/atgu/templates/create_resource.html
@@ -1,137 +1,119 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Editor</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
-  <body>
-    <div class="p-3 mb-3 bg-white border-bottom">
-      <h5 class="my-0 font-weight-normal">ATGU</h5>
-    </div>
+{% extends "layout.html" %}
+{% block title %}Create Resource{% endblock %}
+{% block head %}
+  <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
+{% endblock %}
+{% block breadcrumb_items %}
+  <li class="breadcrumb-item"><a href="{{ base_path }}">ATGU</a></li>
+  <li class="breadcrumb-item"><a href="{{ base_path }}">Resources</a></li>
+  <li class="breadcrumb-item active" aria-current="page">Create</li>
+{% endblock %}
+{% block container_contents %}
+  <form id="resource-form" action="{{ base_path }}/resources/create" method="post" enctype="multipart/form-data">
+    <input type="hidden" name="_csrf" value="{{ csrf_token }}">
 
-    <nav aria-label="breadcrumb">
-      <ol class="breadcrumb bg-transparent">
-	<li class="breadcrumb-item"><a href="{{ base_path }}">ATGU</a></li>
-	<li class="breadcrumb-item"><a href="{{ base_path }}">Resources</a></li>
-	<li class="breadcrumb-item active" aria-current="page">Create</li>
-      </ol>
-    </nav>
-    
-    <form id="resource-form" action="{{ base_path }}/resources/create" method="post" enctype="multipart/form-data">
-      <input type="hidden" name="_csrf" value="{{ csrf_token }}">
-      
-      <div class="container">
-
-	<div class="row my-2">
-	  <div class="col-sm-12 col-md-2">
-	    Title:
-	  </div>
-	  <div class="col-sm-12 col-md-10">
-	    <input name="title" type="text" style="width:50%;" />
-	  </div>
-	</div>
-
-	<div class="row my-2">
-	  <div class="col-sm-12 col-md-2">
-	    Description:
-	  </div>
-	  <div class="col-sm-12 col-md-10">
-	    <textarea name="description" style="width:100%;" rows="3"></textarea>
-	  </div>
-	</div>
-
-	<div class="row my-2">
-	  <div class="col-sm-12 col-md-2">
-	    Contents:
-	  </div>
-	  <div class="col-sm-12 col-md-10">
-	    <div>
-	      <div id="editor"></div>
-	    </div>
-	  </div>
-	</div>
-
-	<input id="contents-input" name="contents" type="hidden" />
-
-	<div class="row my-2">
-	  <div class="col-sm-12 col-md-2">
-	    <div>Tags:</div>
-	    <div style="line-height:1.2;"><small class="text-secondary">comma separated</small></div>
-	  </div>
-	  <div class="col-sm-12 col-md-10">
-	    <input name="tags" type="text" style="width:40%" />
-	  </div>
-	</div>
-
-	<div class="row my-2">
-	  <div class="col-sm-12 col-md-2">
-	    <div>Attachments:</div>
-	  </div>
-	  <div class="col-sm-12 col-md-10">
-	    <div id="files-div">
-	      <div class="my-1">
-		<input name="file" type="file" />
-	      </div>
-	      <div class="my-1">
-		<input name="file" type="file" />
-	      </div>
-	      <div class="my-1">
-		<input name="file" type="file" />
-	      </div>
-	    </div>
-	    <div>
-	      <span id="add-file" class="py-1">
-		<span class="material-icons" style="vertical-align:middle;">add_box</span> Another File
-	      </span>
-	    </div>
-	  </div>
-	</div>
-
-	<div class="m-3">
-	  <button type="submit" class="btn btn-primary mr-3">Create</button>
-	  <a role="button" class="btn btn-secondary" href="{{ base_path }}/resources">Cancel</a>
-	</div>
+      <div class="row my-2">
+        <div class="col-sm-12 col-md-2">
+          Title:
+        </div>
+        <div class="col-sm-12 col-md-10">
+          <input name="title" type="text" style="width:50%;" />
+        </div>
       </div>
-      
-    </form>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js" crossorigin="anonymous"></script>
-    <script>
-      const editorOptions = {
-	  theme: 'snow'
-      };
-      
-      const editor = new Quill('#editor', editorOptions);
-      
-      const resourceForm = document.getElementById("resource-form");
-      const contentsInput = document.getElementById("contents-input");
-      resourceForm.onsubmit = function(event) {
-	  contentsInput.value = JSON.stringify(editor.getContents())
-      }
+      <div class="row my-2">
+        <div class="col-sm-12 col-md-2">
+          Description:
+        </div>
+        <div class="col-sm-12 col-md-10">
+          <textarea name="description" style="width:100%;" rows="3"></textarea>
+        </div>
+      </div>
 
-      function parseHTML(text) {
-	  let dummy = document.createElement('div');
-	  dummy.innerHTML = text.trim()
-	  return dummy.firstChild
-      }
+      <div class="row my-2">
+        <div class="col-sm-12 col-md-2">
+          Contents:
+        </div>
+        <div class="col-sm-12 col-md-10">
+          <div>
+            <div id="editor"></div>
+          </div>
+        </div>
+      </div>
 
-      const addFile = document.getElementById("add-file");
-      const filesDiv = document.getElementById("files-div");
-      addFile.onclick = function(event) {
-	  const newFileDiv = 
-          filesDiv.appendChild(
-	      parseHTML(`
+      <input id="contents-input" name="contents" type="hidden" />
+
+      <div class="row my-2">
+        <div class="col-sm-12 col-md-2">
+          <div>Tags:</div>
+          <div style="line-height:1.2;"><small class="text-secondary">comma separated</small></div>
+        </div>
+        <div class="col-sm-12 col-md-10">
+          <input name="tags" type="text" style="width:40%" />
+        </div>
+      </div>
+
+      <div class="row my-2">
+        <div class="col-sm-12 col-md-2">
+          <div>Attachments:</div>
+        </div>
+        <div class="col-sm-12 col-md-10">
+          <div id="files-div">
+            <div class="my-1">
+              <input name="file" type="file" />
+            </div>
+            <div class="my-1">
+              <input name="file" type="file" />
+            </div>
+            <div class="my-1">
+              <input name="file" type="file" />
+            </div>
+          </div>
+          <div>
+            <span id="add-file" class="py-1">
+              <span class="material-icons" style="vertical-align:middle;">add_box</span> Another File
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <div class="m-3">
+        <button type="submit" class="btn btn-primary mr-3">Create</button>
+        <a role="button" class="btn btn-secondary" href="{{ base_path }}/resources">Cancel</a>
+      </div>
+
+  </form>
+{% endblock %}
+{% block before_body_end %}
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js" crossorigin="anonymous"></script>
+  <script>
+    const editorOptions = {
+        theme: 'snow'
+    };
+
+    const editor = new Quill('#editor', editorOptions);
+
+    const resourceForm = document.getElementById("resource-form");
+    const contentsInput = document.getElementById("contents-input");
+    resourceForm.onsubmit = function(event) {
+        contentsInput.value = JSON.stringify(editor.getContents())
+    }
+
+    function parseHTML(text) {
+        let dummy = document.createElement('div');
+        dummy.innerHTML = text.trim()
+        return dummy.firstChild
+    }
+
+    const addFile = document.getElementById("add-file");
+    const filesDiv = document.getElementById("files-div");
+    addFile.onclick = function(event) {
+        const newFileDiv = 
+        filesDiv.appendChild(
+            parseHTML(`
 <div class="my-1">
-  <input name="file" type="file" />
+<input name="file" type="file" />
 </div>`));
-      }
-    </script>
-  </body>
-</html>
+    }
+  </script>
+{% endblock %}
