--- a/atgu/atgu/templates/layout.html
+++ b/atgu/atgu/templates/layout.html
@@ -3,6 +3,7 @@
   <head>
     <title>{% block title %}{% endblock %}</title>    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
     {% block head %}{% endblock %}
   </head>
