add description to resource page

--- a/atgu/atgu/templates/resource.html
+++ b/atgu/atgu/templates/resource.html
@@ -28,6 +28,8 @@
 
   <p><small class="text-secondary" style="line-height:1.2;">{{ resource['tags'] }}</small></p>
 
+  <p>{{ resource['description'] }}</p>
+
   <div class="mb-3">
     <div id="contents"></div>
   </div>
