[atgu] fix breadcrumb href targets
base_path is empty in production.  href="" refers to the current page,
not the root page.  So always include a trailing slash when using
base_path in the HTML templates.

--- a/atgu/atgu/templates/resources.html
+++ b/atgu/atgu/templates/resources.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block title %}Resources{% endblock %}
 {% block breadcrumb_items %}
-  <li class="breadcrumb-item"><a href="{{ base_path }}">ATGU</a></li>
+  <li class="breadcrumb-item"><a href="{{ base_path }}/">ATGU</a></li>
   <li class="breadcrumb-item active" aria-current="page">Resources</li>
 {% endblock %}
 {% block container_contents %}
