--- a/atgu/atgu/templates/resource.html
+++ b/atgu/atgu/templates/resource.html
@@ -4,8 +4,8 @@
   <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" crossorigin="anonymous">
 {% endblock %}
 {% block breadcrumb_items %}
-  <li class="breadcrumb-item"><a href="{{ base_path }}">ATGU</a></li>
-  <li class="breadcrumb-item"><a href="{{ base_path }}">Resources</a></li>
+  <li class="breadcrumb-item"><a href="{{ base_path }}/">ATGU</a></li>
+  <li class="breadcrumb-item"><a href="{{ base_path }}/resources">Resources</a></li>
   <li class="breadcrumb-item active" aria-current="page">{{ resource['title'] }}</li>
 {% endblock %}
 {% block container_contents %}
