[atgu] Fix textarea HTML

--- a/atgu/atgu/templates/edit_resource.html
+++ b/atgu/atgu/templates/edit_resource.html
@@ -27,7 +27,7 @@
             Description:
           </div>
           <div class="col-sm-12 col-md-10">
-            <textarea name="description" value="{{ resource['description']}}" style="width:100%;" rows="3"></textarea>
+            <textarea name="description" style="width:100%;" rows="3">{{ resource['description'] }}</textarea>
           </div>
         </div>
 
