--- a/web_common/web_common/templates/layout.html
+++ b/web_common/web_common/templates/layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Hail | {% block title %}{% endblock %}</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
     <link rel="shortcut icon" href="{{ base_path }}/common_static/hail_logo_sq.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
